--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "consultas-policiales",
   "version": "1.0.0",
-  "description": "Sistema de inteligencia y análisis de vínculos",
+  "description": "Sistema de inteligencia y análisis de vínc",
   "private": true,
   "scripts": {
-    "dev": "pnpm --filter ./apps/server dev",
-    "dev:client": "pnpm --filter ./apps/client dev",
-    "build": "pnpm --filter ./apps/* build",
-    "start": "pnpm --filter ./apps/server start",
-    "db:migrate": "pnpm --filter ./apps/server db:migrate",
-    "db:studio": "pnpm --filter ./apps/server db:studio"
+    "dev": "concurrently \"pnpm --filter @consultas/shared dev\" \"pnpm --filter @consultas/server dev\" \"pnpm --filter @consultas/client dev\"",
+    "build": "pnpm --filter \"./apps/*\" build",
+    "start": "pnpm --filter @consultas/server start",
+    "db:migrate": "pnpm --filter @consultas/server db:migrate",
+    "db:studio": "pnpm --filter @consultas/server db:studio"
   },
+
   "keywords": [],
   "author": "ferretofreddy",
   "license": "ISC",
